--- a/HTML/about.html
+++ b/HTML/about.html
@@ -1,114 +1,93 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>About US</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-        <!-- Font Awesome Icons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <link rel='stylesheet' type='text/css' media='screen' href='../CSS/style.css'>
-    <link rel='stylesheet' type='text/css' media='screen' href='../CSS/media.css'>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>About Us | Antique Collection</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Navbar Section -->
-    <header>
-    <nav class="navbar">
-      <div class="logo">Master Antique</div>
 
-      <div class="hamburger" id="hamburger">
-        <span></span>
-        <span></span>
-        <span></span>
-      </div>
+  <!-- Hero -->
+  <section class="hero">
+    <h1>About Us</h1>
+    <div class="divider"></div>
+    <p>Celebrating heritage, craftsmanship, and timeless beauty.</p>
+  </section>
 
-      <ul class="nav-links" id="nav-links">
-        <li><a href="../Index.html">Home</a></li>
-        <li><a href="./about.html">About</a></li>
-        <li><a href="./product.html">Products</a></li>
-        <li><a href="./contact.html">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
-
-
-    
-
-
-    <section class="about-section">
-  <div class="about-container">
-    <div class="about-image">
-      <img src="antique-shop.jpg" alt="Master Antique Store">
-    </div>
+  <!-- About Story -->
+  <section class="about-section">
     <div class="about-text">
-      <h2>About Master Antique</h2>
+      <h2>Our Story</h2>
       <p>
-        At <strong>Master Antique</strong>, we are passionate curators of timeless elegance and rare treasures. 
-        For decades, we have been sourcing and preserving exquisite antiques that tell stories of history, 
-        craftsmanship, and cultural heritage.
-      </p>
-      <p>
-        From vintage furniture and decorative art to rare collectibles, each piece in our collection is 
-        handpicked for its authenticity and charm. We believe every antique holds a story — and we are 
-        here to help you make it part of yours.
-      </p>
-      <p class="quote">
-        “Preserving the past, one masterpiece at a time.”
+        Founded with a passion for timeless treasures, Antique Collection curates rare and exquisite artifacts from across the world. Each piece tells a story of tradition, artistry, and cultural heritage.  
+        <br><br>
+        Our mission is to bring these remarkable objects into the present, allowing them to inspire homes and lives for generations to come.
       </p>
     </div>
-  </div>
+    <div class="about-img">
+      <img src="./51jZiqnlIiL._UF894,1000_QL80_.jpg" alt="Our Story" >
+    </div>
+  </section>
+   
+<section class="mission">
+    <h2>Our Mission</h2>
+    <p>We strive to make history accessible by offering unique antiques that add value, charm, and authenticity to your living spaces. Every item in our collection is handpicked with care, ensuring quality, originality, and heritage.</p>
 </section>
 
-
-
-
-
-
-
-
-    <footer>
-  <div class="footer-container">
-    <div class="footer-section">
-      <h3>About Us</h3>
-      <p>We create modern, high-performance websites and applications tailored for your business success.</p>
-    </div>
-
-    <div class="footer-section">
-      <h3>Quick Links</h3>
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a href="#">Portfolio</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
-    </div>
-
-    <div class="footer-section">
-      <h3>Contact</h3>
-      <div class="footer-Section-main">
-          <p><i class="fas fa-map-marker-alt"></i> Karachi, Pakistan</p>
-          <p><i class="fas fa-phone"></i> +92 300 1234567</p>
-          <p><i class="fas fa-envelope"></i> info@yourwebsite.com</p>
+<!-- Timeline -->
+<section class="timeline">
+    <h2>Our Journey</h2>
+    <div class="timeline-line">
+        <div class="timeline-item">
+            <h3>1998 – Humble Beginnings</h3>
+            <p>Started as a small family antique shop with just a few unique collectibles.</p>
+        </div>
+        <div class="timeline-item">
+            <h3>2008 – Expanding Horizons</h3>
+            <p>Began sourcing treasures internationally, building a global network.</p>
+        </div>
+        <div class="timeline-item">
+            <h3>2020 – Digital Presence</h3>
+            <p>Launched our online platform to make antiques accessible worldwide.</p>
         </div>
     </div>
+</section>
 
-    <div class="footer-section">
-      <h3>Follow Us</h3>
-      <div class="social-icons">
-        <a href="#"><i class="fab fa-facebook-f"></i></a>
-        <a href="#"><i class="fab fa-twitter"></i></a>
-        <a href="#"><i class="fab fa-instagram"></i></a>
-        <a href="#"><i class="fab fa-linkedin-in"></i></a>
+<!-- Craftsmanship Section -->
+  <section class="craftsmanship">
+    <div class="craftsmanship-content">
+      <h2>Artistry & Craftsmanship</h2>
+      <p>
+        Every antique is a work of art, carrying the legacy of the craftsmen who poured their heart into creating it. At Antique Collection, we celebrate and honor this heritage through our carefully curated pieces.
+      </p>
+    </div>
+  </section>
+
+  <!-- Mission & Values -->
+  <section class="values">
+    <h2>Our Mission & Values</h2>
+    <div class="value-grid">
+      <div class="value-card">
+        <h3>Authenticity</h3>
+        <p>We carefully verify every item to ensure it preserves its true heritage.</p>
+      </div>
+      <div class="value-card">
+        <h3>Craftsmanship</h3>
+        <p>Each antique reflects the skill and dedication of master artisans.</p>
+      </div>
+      <div class="value-card">
+        <h3>Preservation</h3>
+        <p>We believe in protecting artifacts so their stories live on for centuries.</p>
       </div>
     </div>
-  </div>
+  </section>
 
-  <div class="footer-bottom">
-    <p>&copy; 2025 K&H TECH SOL. All Rights Reserved.</p>
-  </div>
-</footer>
+  <!-- Closing Quote -->
+  <section class="closing">
+    <h2>"Preserving the past, inspiring the future."</h2>
+    <p>At Antique Collection, every artifact is more than an object – it’s a legacy, a piece of history that continues to inspire beauty in the present day.</p>
+  </section>
 
-
-    <script src='../JS/app.js'></script>
 </body>
 </html>
