--- a/HTML/about.html
+++ b/HTML/about.html
@@ -4,9 +4,30 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About Us | Antique Collection</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link rel='stylesheet' type='text/css' media='screen' href='../CSS/style.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='../CSS/media.css'>
 </head>
 <body>
+    <!-- Navbar Section -->
+    <header>
+    <nav class="navbar">
+      <div class="logo">Master Antique</div>
+
+      <div class="hamburger" id="hamburger">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+
+      <ul class="nav-links" id="nav-links">
+        <li><a href="../Index.html">Home</a></li>
+        <li><a href="./about.html">About</a></li>
+        <li><a href="./product.html">Products</a></li>
+        <li><a href="./contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
 
   <!-- Hero -->
   <section class="hero">
@@ -89,5 +110,49 @@
     <p>At Antique Collection, every artifact is more than an object – it’s a legacy, a piece of history that continues to inspire beauty in the present day.</p>
   </section>
 
+    <footer>
+  <div class="footer-container">
+    <div class="footer-section">
+      <h3>About Us</h3>
+      <p>We create modern, high-performance websites and applications tailored for your business success.</p>
+    </div>
+
+    <div class="footer-section">
+      <h3>Quick Links</h3>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Services</a></li>
+        <li><a href="#">Portfolio</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-section">
+      <h3>Contact</h3>
+      <div class="footer-Section-main">
+          <p><i class="fas fa-map-marker-alt"></i> Karachi, Pakistan</p>
+          <p><i class="fas fa-phone"></i> +92 300 1234567</p>
+          <p><i class="fas fa-envelope"></i> info@yourwebsite.com</p>
+        </div>
+    </div>
+
+    <div class="footer-section">
+      <h3>Follow Us</h3>
+      <div class="social-icons">
+        <a href="#"><i class="fab fa-facebook-f"></i></a>
+        <a href="#"><i class="fab fa-twitter"></i></a>
+        <a href="#"><i class="fab fa-instagram"></i></a>
+        <a href="#"><i class="fab fa-linkedin-in"></i></a>
+      </div>
+    </div>
+  </div>
+
+  <div class="footer-bottom">
+    <p>&copy; 2025 K&H TECH SOL. All Rights Reserved.</p>
+  </div>
+</footer>
+
+
+    <script src='../JS/app.js'></script>
 </body>
 </html>
