--- a/Index.html
+++ b/Index.html
@@ -29,6 +29,7 @@
         <li><a href="./HTML/about.html">About</a></li>
         <li><a href="./HTML/product.html">Products</a></li>
         <li><a href="./HTML/contact.html">Contact</a></li>
+        <li><a href="./HTML/gallery.html">Gallery</a></li>
       </ul>
     </nav>
   </header>
