--- a/HTML/gallery.html
+++ b/HTML/gallery.html
@@ -37,19 +37,19 @@
 
         <div class="gallery-grid">
             <a href="#img1" class="gallery-item">
-                <img src="./e3a853b82cc80bc8677b8ecbad920dd7.jpg_720x720q80.jpg_.webp" alt="Antique 1">
+                <img src="../images/image-1.png" alt="Antique 1">
                 <div class="gallery-caption">Vintage Clock</div>
             </a>
             <a href="#img2" class="gallery-item">
-                <img src="./images.jpeg" alt="Antique 2">
+                <img src="../images/image-2.png" alt="Antique 2">
                 <div class="gallery-caption">Classic Lamp</div>
             </a>
             <a href="#img3" class="gallery-item">
-                <img src="./Vintage-Royal-Standard-England-Yellow-Porcelain-Tea-Set-IMG-2522.webp" alt="Antique 3">
+                <img src="../images/image-3.png" alt="Antique 3">
                 <div class="gallery-caption">Royal Tea Set</div>
             </a>
             <a href="#img4" class="gallery-item">
-                <img src="./81jreGH-UbL._UF894,1000_QL80_.jpg" alt="Antique 4">
+                <img src="../images/image-4.png" alt="Antique 4">
                 <div class="gallery-caption">Wooden Chest</div>
             </a>
         </div>
