our products & contact + images added

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -13,7 +13,7 @@
 <body>
     <!-- Navbar Section -->
     <header>
-    <nav class="navbar">
+    <nav class="navbars">
       <div class="logo">Master Antique</div>
 
       <div class="hamburger" id="hamburger">
