--- a/HTML/product.html
+++ b/HTML/product.html
@@ -15,7 +15,7 @@
 <body>
     <!-- Navbar Section -->
     <header>
-    <nav class="navbar">
+    <nav class="navbars">
       <div class="logo">Master Antique</div>
 
       <div class="hamburger" id="hamburger">
