--- a/Index.html
+++ b/Index.html
@@ -10,12 +10,24 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel='stylesheet' type='text/css' media='screen' href='./CSS/style.css'>
     <link rel='stylesheet' type='text/css' media='screen' href='./CSS/media.css'>
-</head>
+
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+  
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+
+
+
+
+  </head>
 
 <body>
     <!-- Navbar Section -->
     <header>
-    <nav class="navbar">
+    <nav class="navbars">
       <div class="logo">Master Antique</div>
 
       <div class="hamburger" id="hamburger">
@@ -67,6 +79,183 @@
     <h1>Preserving the Elegance of the Past</h1>
     <p>Discover timeless pieces with a story.</p>
   </section>
+
+<!--  -->
+    <div class="container-fluid">
+        <div class="container">
+            <div class="row introduction">
+                <div class="col-12">
+                    <h1>Our Products</h1>
+                    <p>At Master Antique, we believe every piece tells a story — a timeless journey of art, culture, and craftsmanship passed down through generations. Our collection brings together rare treasures from different eras and regions, carefully curated for collectors, interior designers, and enthusiasts who appreciate the charm of the past.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <br>
+    <br>
+    <div class="container-fluid">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-3 col-sm-6 col-12 ">
+                    <div class="card rounded-3 ">       
+                        <a href="#!" target="_blank"><img  src="./images/18th Century Elm Trestle Table.jpeg" ></a>
+                        <h2>18<sup>th</sup> Century Elm Trestle Table</h2>
+                        <p>$875</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-sm-6 col-12">
+                    <div class="card rounded-3 ">
+                        <a href=" " target="_blank"><img  src="./images/19th Faux Bamboo Armchair.jpeg" ></a>                        
+                        <h2>19<sup>th</sup> Faux Bamboo Armchair</h2>
+                        <p>$500</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-sm-6 col-12 ">
+                    <div class="card rounded-3 ">
+                        <a href=" " target="_blank"><img src="./images/Antique Burr Walnet Dressing Table.jpeg" ></a>
+                        <h2>Antique Burr Walnet Dressing Table</h2>
+                        <p>$600</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-sm-6 col-12">
+                    <div class="card rounded-3 ">
+                        <a href=" " target="_blank"><img  src="./images/Antique Folk Art Marriage Coffer.jpeg"></a>                       
+                        <h2>Antique Folk Art Marriage Coffer</h2>
+                        <p>$300</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row mt-lg-4 mt-sm-4 mt-4">
+                <div class="col-lg-3 col-sm-6 col-12">
+                    <div class="card rounded-3">
+                        <a href=" " target="_blank"><img  src="./images/Antique Dinning Table.jpeg" ></a>
+                        <h2>Antique Dinning Table</h2>
+                        <p>$1200</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-sm-6 col-12">
+                    <div class="card rounded-3">
+                        <a href=" " target="_blank"><img  src="./images/Antique French Table.jpeg" ></a>                        
+                        <h2>Antique French Table </h2>
+                        <p>$1000</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-sm-6 col-12">
+                    <div class="card rounded-3">
+                        <a href=" " target="_blank"><img src="./images/Antique French Pair of Chair.jpeg"></a>
+                        <h2>Antique French Pair of Chair</h2>
+                        <p>$800</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-sm-6 col-12">
+                    <div class="card rounded-3">
+                        <a href=" " target="_blank"><img  src="./images/Antique Swedish Table.jpeg"></a>                        
+                        <h2>Antique Swedish Table</h2>
+                        <p>$400</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row mt-lg-4 mt-sm-4 mt-4">
+                <div class="col-lg-3 col-sm-6 col-12">
+                    <div class="card rounded-3">
+                        <a href=" " target="_blank"><img  src="./images/Art Deco Burr Side Table.jpeg"  ></a>
+                        <h2>Art Deco Burr Side Table</h2>
+                        <p>$300</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-sm-6 col-12">
+                    <div class="card rounded-3">
+                        <a href=" " target="_blank"><img  src="./images/Attractive Deco Loom lloyd Side Table.jpeg"></a>                        
+                        <h2>Attractive Deco Loom lloyd Side Table </h2>
+                        <p>$400</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-sm-6 col-12">
+                    <div class="card rounded-3">
+                        <a href=" " target="_blank"><img src="./images/attractive oak table desk.jpeg" ></a>
+                        <h2>Attractive Oak Table Desk</h2>
+                        <p>$300</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-sm-6 col-12">
+                    <div class="card rounded-3">
+                        <a href=" " target="_blank"><img  src="./images/19th Cupboard or Buffet.jpeg"></a>                        
+                        <h2>19<sup>th</sup> Cupboard or Buffet</h2>
+                        <p>$500</p>
+                    </div>
+                </div>
+            </div>
+             <div class="row mt-lg-4 mt-sm-4 mt-4">
+                <div class="col-lg-3 col-sm-6 col-12">
+                    <div class="card rounded-3">
+                        <a href=" " target="_blank"><img  src="./images/french work bench.jpeg"  ></a>
+                        <h2>French Work Bench</h2>
+                        <p>$500</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-sm-6 col-12">
+                    <div class="card rounded-3">
+                        <a href=" " target="_blank"><img  src="./images/Leather sofa set.jpeg" ></a>                        
+                        <h2>Leather Sofa Set </h2>
+                        <p>$1400</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-sm-6 col-12">
+                    <div class="card rounded-3">
+                        <a href=" " target="_blank"><img src="./images/marble top coffee table.jpeg" ></a>
+                        <h2>Marble Top Coffee Table</h2>
+                        <p>$600</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-sm-6 col-12">
+                    <div class="card rounded-3">
+                        <a href=" " target="_blank"><img  src="./images/Ork Art Deco Modernist Desk.jpeg" ></a>                        
+                        <h2>Ork Art Deco Modernist Desk</h2>
+                        <p>$500</p>
+                    </div>
+                </div>
+            </div>
+             <div class="row mt-lg-4 mt-sm-4 mt-4">
+                <div class="col-lg-3 col-sm-6 col-12">
+                    <div class="card rounded-3">
+                        <a href=" " target="_blank"><img  src="./images/COak Tea Trolley.jpeg" ></a>
+                        <h2>COak Tea Trolley</h2>
+                        <p>$400</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-sm-6 col-12">
+                    <div class="card rounded-3">
+                        <a href=" " target="_blank"><img  src="./images/Victorian Pine Chest Drawers.jpeg" ></a>                        
+                        <h2>Victorian Pine Chest Drawers </h2>
+                        <p>$500</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-sm-6 col-12">
+                    <div class="card rounded-3">
+                        <a href=" " target="_blank"><img src="./images/Decorative Oak side Table.jpeg" ></a>
+                        <h2>Decorative Oak side Table</h2>
+                        <p>$300</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-sm-6 col-12">
+                    <div class="card rounded-3">
+                        <a href=" " target="_blank"><img  src="./images/French wood Chopping Table.jpeg"></a>                        
+                        <h2>French wood Chopping Table</h2>
+                        <p>$500</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+            
+
+<!--  -->
+
+
+
+
+
+
 
 <!--  -->
 
